[package]
name = "neptun-cli"
description = "an implementation of the WireGuard® protocol designed for portability and speed"
version = "0.6.0"
authors = ["Noah Kennedy <nkennedy@cloudflare.com>", "Andy Grover <agrover@cloudflare.com>", "Jeff Hiner <jhiner@cloudflare.com>"]
license = "BSD-3-Clause"
repository = "https://github.com/nordsecurity/neptun"
edition = "2021"

[dependencies]
daemonize = "0.5.0"
clap = { version = "4.5", features = ["env"] }
tracing = "0.1.31"
tracing-subscriber = "0.3.18"
tracing-appender = "0.2.1"

[dependencies.neptun]
version = "0.6.0"
path = "../neptun"
features = ["device"]
