[package]
name = "xray"
description = "Traffic inspection tool for NepTUN"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"

[dependencies]
base64 = "0.22.1"
clap = { version = "4.5", features = ["derive"] }
color-eyre = "0.6"
csv = "1.3.1"
curve25519-dalek = "4.1"
pnet = "0.35"
rand = "0.8.5"
thiserror = "1.0"
tokio = { version = "1.41", features = ["macros", "rt-multi-thread", "time", "net", "sync"] }
x25519-dalek = "2.0"

[dependencies.neptun]
version = "0.6.0"
path = "../neptun"
features = ["device"]
